12/27/2025: Reworked to get subscription updated and handled under the billing services based on latest API standards..